# bsl-atlas

./: .env.example  .gitignore  COPYRIGHT  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/: __init__.py  config.py  main.py
src/indexer/: __init__.py  embeddings.py  file_tracker.py  vector_indexer.py
src/parsers/: __init__.py  code.py  form_xml.py  help.py  metadata.py  metadata_xml.py  skd_xml.py  tree_sitter_parser.py
src/search/: __init__.py  code_grep.py  hybrid.py
src/storage/: __init__.py  models.py  sqlite_store.py
tests/: test_advanced_search.py  test_bsl_parser.py  test_code_grep.py  test_eval_harness.py  test_integration.py  test_reverse_call_index.py  test_sqlite_store.py  test_wave0_edges_incremental.py  test_wave1_graph.py  test_wave2.py
