[project]
name = "1c-codemetadata"
version = "1.0.0"
description = "MCP server for 1C codebase structural and semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["1c", "mcp", "embeddings", "vector-search", "chromadb", "bsl"]

dependencies = [
    "fastmcp>=2.0.0",
    "chromadb>=0.4.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-cohere>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "python-dotenv>=1.0.0",
    "chardet>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]
local = [
    "sentence-transformers>=2.7.0",  # For local embeddings fallback
]

[project.scripts]
1c-codemetadata = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
